# ZhongMeiRagProject2.0

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml  mypy.ini
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260509_stage_2_auth_core.py  20260509_stage_3_user_admin.py  20260509_stage_4_knowledge_base.py  20260510_stage_5_ingest_core.py  20260510_stage_6_pdf_preview_rag.py  20260510_stage_7_chat_rag.py  20260511_stage_8_search_dashboard.py  20260513_beijing_time_records.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/: admin.py  auth.py  chat.py  dashboard.py  deps.py  documents.py  health.py  knowledge_base.py  knowledge_base_deps.py  pdf_preview.py  search.py  user.py
backend/app/cli/: seed_admin.py  seed_default_users.py
backend/app/core/: config.py  logging.py  timezone.py
backend/app/db/: session.py
backend/app/middleware/: trace_id.py
backend/app/models/: __init__.py  auth.py  chat.py  document.py  knowledge_base.py  search_export.py
backend/app/schemas/: __init__.py  (+9 more)
backend/tests/: conftest.py  test_alembic_stage_5.py  test_auth.py  test_chat_api.py  test_chat_graph.py  test_chunker.py  test_dashscope_client.py  test_documents_api.py  test_health.py  test_ingest_task.py  test_knowledge_base.py  test_ocr_client.py  test_outline_parser.py  test_pdf_preview.py  test_retrieval_debug.py  test_retriever.py  test_search_dashboard.py  test_seed_default_users.py  test_timezone.py  test_track_a_indexer.py  test_track_b_indexer.py  test_user_admin.py
(+143 files in other folders)
