[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhongmei-rag-backend"
version = "0.1.0"
description = "ZhongMei RAG backend service"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "asyncmy>=0.2,<0.3",
  "aiosqlite>=0.20,<0.21",
  "celery[redis]>=5.4,<6",
  "fastapi>=0.115,<0.116",
  "flower>=2.0,<3",
  "loguru>=0.7,<0.8",
  "prometheus-fastapi-instrumentator>=7.0,<8",
  "pydantic-settings>=2.6,<3",
  "python-jose[cryptography]>=3.3,<4",
  "python-multipart>=0.0.18",
  "redis>=5.2,<6",
  "slowapi>=0.1,<0.2",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.32,<0.33",
]

[project.optional-dependencies]
dev = [
  "black>=24.10,<25",
  "httpx>=0.27,<0.28",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
  "ruff>=0.8,<0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
ignore_missing_imports = true
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
